# video-mosaic

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
homebrew/: video-mosaic.rb
src/video_mosaic/: __init__.py  cli.py  download.py  extract.py  filters.py  mosaic.py  pdf.py  probe.py  utils.py
tests/: conftest.py  test_e2e.py
