[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-mosaic"
version = "0.1.0"
description = "Extract frames from a video and compose them into a single mosaic image."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gonzalo Fuentes", email = "gonzalofuentessansalvador@gmail.com" },
]
keywords = [
    "video", "mosaic", "frames", "contact-sheet", "thumbnails",
    "ffmpeg", "storyboard", "video-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "Pillow>=9.0",
    "rich>=13.0",
]

[project.optional-dependencies]
urls = [
    "yt-dlp>=2023.0",
]
dev = [
    "build",
    "twine",
    "ruff",
    "pytest",
    "yt-dlp>=2023.0",
]

[project.urls]
Homepage = "https://github.com/GonzaloFuentes28/video-mosaic"
Repository = "https://github.com/GonzaloFuentes28/video-mosaic"
Issues = "https://github.com/GonzaloFuentes28/video-mosaic/issues"
Changelog = "https://github.com/GonzaloFuentes28/video-mosaic/releases"

[project.scripts]
video-mosaic = "video_mosaic.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100
